--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.27",
+    "apollo-link": "^1.2.8",
+    "graphql": "^14.1.1",
     "vue": "^2.5.22",
+    "vue-apollo": "^3.0.0-beta.27",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -19,8 +23,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "graphql-tag": "^2.9.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-apollo": "^0.19.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
