--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "apollo-boost": "^0.1.27",
     "apollo-link": "^1.2.8",
+    "bootstrap": "^4.2.1",
     "graphql": "^14.1.1",
+    "jquery": "^3.3.1",
+    "luxon": "^1.10.0",
+    "popper.js": "^1.14.7",
     "vue": "^2.5.22",
     "vue-apollo": "^3.0.0-beta.27",
+    "vue-datetime": "^1.0.0-beta.10",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
