--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "apollo-boost": "^0.1.27",
     "apollo-link": "^1.2.8",
     "bootstrap": "^4.2.1",
     "graphql": "^14.1.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "luxon": "^1.10.0",
     "popper.js": "^1.14.7",
     "vue": "^2.5.22",
     "vue-apollo": "^3.0.0-beta.27",
+    "vue-async-computed": "^3.5.2",
     "vue-datetime": "^1.0.0-beta.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.5",
     "vuex": "^3.0.1",
     "weekstart": "^1.0.0"
   },
